--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "basicsr>=1.4.2",
+    "black>=25.11.0",
     "facexlib>=0.3.0",
     "gfpgan>=1.3.8",
     "numpy>=2.0.2",
