--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,6 @@ dependencies = [
     "pytest>=8.4.2",
     "realesrgan>=0.3.0",
     "torch>=2.8.0",
-    "torchvision>=0.23.0",
+    "torchvision<=0.15.0",
     "tqdm>=4.67.3",
 ]
